@@ -56,3 +56,5 @@ ShowLibrariesAction.hideReferenced.tooltip=Hide Referenced Libs
 ShowLibrariesAction.showReferenced.tooltip=Show Referenced Libs
 LibraryRefContainer.Libraries=Libraries
 IncludeRefContainer.Includes=Includes
+
+CView.statusLine = {0} items selected
